fixed the overflow of the asset on the smallest breakpoint

--- a/src/packages/modules/editorial-360viewer-e8/css/_responsive-360viewer-e8.scss
+++ b/src/packages/modules/editorial-360viewer-e8/css/_responsive-360viewer-e8.scss
@@ -20,8 +20,18 @@
 } // END 980px-1199px Default
 
 
+@media (min-width: 48em) and (max-width: 61.1875em) {
+  .e360 {
+    div.image-module {
+      height: 475px;
+    }
+  }
 
+}
 
+@media (max-width: 47.9999em) {
+
+}
 
 
 // ------------------------------------------------
@@ -180,8 +190,19 @@
 //                                  888
 // ------------------------------------------------
 
-@media (max-width: px-em(767px)) {
-
+@media (min-width: 480px) and (max-width: px-em(767px)) {
+  .e360 {
+    div.image-module {
+      height: 400px;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+    .controls {
+      .table-center {
+        bottom: 5em;
+      }
+    }
+  }
 } // END max-width: 767px
 
 
@@ -227,7 +248,6 @@
 //                                 888
 
 @media (max-width: 567px) {
-  
 } // END max-width: 567px
 
 
@@ -251,7 +271,18 @@
 // ------------------------------------------------
 
 @media (max-width: 479px) {
-  
+  .e360 {
+    div.image-module {
+      height: 225px;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
+    .controls {
+      .table-center {
+        bottom: 52px;
+      }
+    }
+  }
 } // END max-width: 479px
 
 // 618 - 767 
